--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "quiz-do-amor",
   "version": "1.0.0",
   "type": "module",
-
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -11,7 +10,8 @@
   "dependencies": {
     "framer-motion": "^11.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
